deploy/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
    networking.gke.io/managed-certificates: "site-certificate"
    kubernetes.io/ingress.global-static-ip-name: "site-production-ip"
  name: site-ingress
spec:
  rules:
  - host: bootifulpodcast.fm
    http:
      paths:
      - backend:
          serviceName: site
          servicePort: 80
